Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetundefined.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
